# Wordle

./: CMakeLists.txt  CMakePresets.json  README.md  franklin-normal-700 (1).hpp  main.cpp
